<?xml version="1.0"?>
<package>
  <name>rsg_urdfloader</name>
  <version>0.0.0</version>
  <description>The rsg_urdfloader package</description>
  <maintainer email="locomotec@todo.todo">locomotec</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>orocos_kdl</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>orocos_kdl</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>

</package>
